syntax = "proto3";

option go_package = "./pb";

service CommentRpc {
    rpc AddComment (AddCommentRequest) returns (AddCommentResponse) {}
    rpc DelComment (DelCommentRequest) returns (DelCommentResponse) {}
    rpc GetCommentList (GetCommentListRequest) returns (GetCommentListResponse) {}
    rpc GetCommentCount (GetCommentCountRequest) returns (GetCommentCountResponse) {}
}

message AddCommentRequest {
    int64 video_id = 1;
    string content = 2;
    int64 user_id = 3;
}

message AddCommentResponse {
    Comment comment = 1;
}

message DelCommentRequest {
    int64 comment_id = 1;
}

message DelCommentResponse {
}

message Comment {
    int64 id = 1;
    int64 video_id = 2;
    string content = 3;
    string create_date = 4;
}

message GetCommentListRequest {
    int64 video_id = 1;
    int64 page_num = 2;
    int64 page_size = 3;
}

message GetCommentListResponse {
    repeated Comment comment_list = 1;
}

message GetCommentCountRequest {
    int64 video_id = 1;
}

message GetCommentCountResponse {
    int64 count = 1;
}
